Fixed align of syncronized sites in hamburger menu

--- a/chrome/components/one_hamburger-menu-icons.css
+++ b/chrome/components/one_hamburger-menu-icons.css
@@ -23,7 +23,7 @@
 /* Alinear lista de pestañas sincronizadas */
     
 #appMenu-popup .subviewbutton[image] > .toolbarbutton-text, .subviewbutton[targetURI] > .toolbarbutton-text{
-    padding-inline-start: calc(0px - var(--margin-right-icons-personal)) !important;
+    padding-inline-start: calc(12px - var(--margin-right-icons-personal)) !important;
 }
 
 /* Tamaño y margen de los íconos */
